# va-disability-agent

./: .env.example  .gitignore  AGENTS.md  CONTEXT.md  Makefile  README.md  docker-compose.yml  pyproject.toml
data/: SOURCE.md  anatomy.yaml  concepts.yaml  duty_mos_noise.xlsx  mos_risk.yaml  va_gov_filing_template.md
docs/: PRD.md
docs/agents/: backlog.md  domain.md
notebooks/: 00_setup.ipynb  01_ingest_cfr.ipynb  02_full_section_ingestion.ipynb  02_tracer.ipynb  03_ingest_jobcodes.ipynb  04_chat_intake.ipynb  07_closing_output.ipynb  08_text2cypher_demo.ipynb  09_reingestion.ipynb
scripts/: install-skills.sh
src/va_agent/: __init__.py  config.py  embeddings.py
src/va_agent/agent/: __init__.py  concepts.py  nodes.py  orchestrator.py  probes.py  state.py
src/va_agent/graph/: __init__.py  driver.py  tools.py  writers.py
src/va_agent/ingestion/: __init__.py  cfr.py  diff.py  discovery.py  ecfr_client.py  extraction.py  jobcodes.py  risk_overlay.py  (+2 more)
tests/: test_anatomy_laterality.py  test_claim_reviewer.py  test_closing.py  test_concepts.py  test_diff.py  test_discovery.py  test_driver.py  test_exam_prep.py  test_factuality.py  test_full_section_ingestion.py  test_ingestion_pipeline.py  test_jobcodes_ingestion.py  test_matcher_and_drafter.py  test_neo4j_smoke.py  test_orchestrator.py  test_probes.py  test_risk_overlay.py  test_rule_ingestion.py  test_rule_validation.py  test_tools.py  test_validation.py
tests/fixtures/: anatomy_small.yaml  duty_mos_noise_fixture.xlsx  risk_overlay_bad_schema.yaml  risk_overlay_invalid_ref.yaml  risk_overlay_valid.yaml
(+9 files in other folders)
