[project]
name = "va-disability-agent"
version = "0.0.1"
description = "Local knowledge-graph + Graph RAG agent for VA disability claim filing"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Leighton Tidwell" },
]
dependencies = [
    "neo4j>=5.21",
    "langchain>=1.0",
    "langgraph>=0.4",
    "langchain-openai>=0.3",
    "lxml>=5.0",
    "pydantic>=2.0",
    "openpyxl>=3.1",
    "jupyterlab>=4.0",
    "python-dotenv>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/va_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"
